docs-archive/apache-airflow/2.6.1/_sources/_api/airflow/triggers/file/index.rst.txt
:py:mod:`airflow.triggers.file`
===============================

.. py:module:: airflow.triggers.file


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.triggers.file.FileTrigger




.. py:class:: FileTrigger(filepath, recursive = False, poll_interval = 5.0)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`

   A trigger that fires exactly once after it finds the requested file or folder.

   :param filepath: File or folder name (relative to the base path set within the connection), can
       be a glob.
   :param recursive: when set to ``True``, enables recursive directory matching behavior of
       ``**`` in glob filepath parameter. Defaults to ``False``.

   .. py:method:: serialize()

      Serializes FileTrigger arguments and classpath.


   .. py:method:: run()
      :async:

      Loop until the relevant files are found.



